--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,8 @@
     "types": []
   },
   "files": [
-    "src/main.ts"
+    "src/main.ts",
+    "src/app/dialog/open-type.ts"
   ],
   "include": [
     "src/**/*.d.ts"
