--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "bootstrap-css-only": "^4.4.1",
     "intro.js": "^7.0.1",
+    "ng-sidebar": "^9.4.3",
     "ngx-color-picker": "^14.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
